--- a/rtl_433/config.json
+++ b/rtl_433/config.json
@@ -1,6 +1,6 @@
 {
-  "name": "rtl_433",
-  "image": "ghcr.io/pbkhrv/rtl_433-hass-addons-rtl_433-{arch}",
+  "name": "rtl_433 (fork)",
+  "image": "ghcr.io/marcusds/rtl_433-hass-addons-rtl_433-{arch}",
   "version": "1.0.0",
   "slug": "rtl433",
   "description": "Receive wireless sensor data via an SDR dongle and rtl_433",
