--- a/rtl_433_mqtt_autodiscovery-next/config.json
+++ b/rtl_433_mqtt_autodiscovery-next/config.json
@@ -1,11 +1,11 @@
 {
   "name": "rtl_433 MQTT Auto Discovery (next)",
-  "image": "ghcr.io/pbkhrv/rtl_433-hass-addons-rtl_433_mqtt_autodiscovery-next-{arch}",
+  "image": "ghcr.io/marcusds/rtl_433-hass-addons-rtl_433_mqtt_autodiscovery-next-{arch}",
   "version": "next",
   "slug": "rtl433mqttautodiscovery-next",
   "description": "Automatic discovery of rtl_433 device information via MQTT",
-  "url": "https://github.com/pbkhrv/rtl_433-hass-addons/tree/main/rtl_433_mqtt_autodiscovery-next",
-  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "url": "https://github.com/marcusds/rtl_433-hass-addons/tree/main/rtl_433_mqtt_autodiscovery-next",
+  "arch": ["aarch64", "amd64"],
   "startup": "application",
   "boot": "auto",
   "init": false,
