--- a/rtl_433_mqtt_autodiscovery/config.json
+++ b/rtl_433_mqtt_autodiscovery/config.json
@@ -1,11 +1,11 @@
 {
   "name": "rtl_433 MQTT Auto Discovery",
-  "image": "ghcr.io/pbkhrv/rtl_433-hass-addons-rtl_433_mqtt_autodiscovery-{arch}",
+  "image": "ghcr.io/marcusds/rtl_433-hass-addons-rtl_433_mqtt_autodiscovery-{arch}",
   "version": "0.9.0",
   "slug": "rtl433mqttautodiscovery",
   "description": "Automatic discovery of rtl_433 device information via MQTT",
-  "url": "https://github.com/pbkhrv/rtl_433-hass-addons/tree/main/rtl_433_mqtt_autodiscovery",
-  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "url": "https://github.com/marcusds/rtl_433-hass-addons/tree/main/rtl_433_mqtt_autodiscovery",
+  "arch": ["aarch64", "amd64"],
   "startup": "application",
   "boot": "auto",
   "init": false,
