feat: build osmocom rtl-sdr from source and fix build issues
- Build rtl-sdr from https://github.com/osmocom/rtl-sdr instead of Alpine package
- Install rtl-sdr to system paths before building rtl_433
- Fix working directory in rtl_433_builder stage
- Update documentation with fork attribution
- Remove 32-bit architecture support (armhf, armv7, i386) - now 64-bit only

--- a/rtl_433/Dockerfile
+++ b/rtl_433/Dockerfile
@@ -35,6 +35,7 @@ RUN make DESTDIR=/build/root/ install
 
 FROM rtlsdr_builder as rtl_433_builder
 
+WORKDIR /build
 RUN git clone https://github.com/merbanan/rtl_433
 WORKDIR ./rtl_433
 
