--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -61,7 +61,7 @@ jobs:
 
     - name: Build and push ${{ matrix.addon }} ${{ matrix.arch }} image
       uses: home-assistant/builder@master
-      if: github.event.pull_request.head.repo.full_name == github.repository
+      if: github.event.pull_request.head.repo.full_name == github.repository || github.event_name == 'push'
       with:
         args: |
           --${{ matrix.arch }} \
