--- a/rtl_433/config.json
+++ b/rtl_433/config.json
@@ -1,7 +1,7 @@
 {
   "name": "rtl_433 (fork)",
   "image": "ghcr.io/marcusds/rtl_433-hass-addons-rtl_433-{arch}",
-  "version": "1.0.0",
+  "version": "main",
   "slug": "rtl433",
   "description": "Receive wireless sensor data via an SDR dongle and rtl_433",
   "url": "https://github.com/marcusds/rtl_433-hass-addons/tree/main/rtl_433",
